fix: actions menu border visibility for pages Settings > DS template Settings > Classifications

--- a/styles/project/components/_settings-selector.scss
+++ b/styles/project/components/_settings-selector.scss
@@ -21,7 +21,7 @@ settings-selector {
     padding: $padding-top-default $custom-selector-padding-right $padding-bottom-default $custom-selector-padding-left;
     cursor: pointer;
     background-color: $white;
-    z-index: 1;
+    z-index: 1000;
     border: 1px solid transparent;
     transition: $transition-default;
 
